[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_exporter"
version = "0.1.0"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "A Python library for exporting modbus registers as metrics for Prometheus"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "prometheus_exporter >= 1.1.0",
    "aiohttp >= 3.9.1",
    "zenlib >= 2.0.0",
    "pymodbus >= 3.6.0",
]

[project.scripts]
modbus_exporter = "modbus_exporter.main:main"
